[package]
name = "nanotec-stepper-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
num-traits = "0.2.15"
num-derive = "0.3.3"
thiserror = "1.0.31"

[dev-dependencies]
# only for doctests
serialport = "4.2.0"
nanotec-stepper-driver-test = {path = "nanotec-stepper-driver-test/"}

[workspace]
members = ["nanotec-stepper-driver-test"]
